[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "injectool"
description = "Dependency injection tool"
keywords = ["di", "dependency", "injection", "ioc", "inversion of control", "inject"]
version = "3.0.0"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/eumis/injectool"

[tool.pylint.main]
disable = ["too-few-public-methods", "missing-class-docstring", "missing-function-docstring", "missing-module-docstring"]
max-line-length = 120

[tool.pytest.ini_options]
python_files = "*_tests.py"
python_classes = "*Tests"
